# aocpp

./: .gitignore  CMakeLists.txt
2023/16/: day16.cpp
2023/17/: day17.cpp
2024/01/: day01.cpp
